<resources>
    <string name="app_name">Mapas</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="latitude">Latitude</string>
    <string name="_0_0">0.0</string>
    <string name="longitude">Longitude</string>
    <string name="ver_no_mapa">Ver no Mapa</string>
    <string name="ver_endere_o">Ver Endereço</string>
    <string name="ver_imagem">Ver Imagem</string>
    <string name="mostrar_mapa">Mostrar Mapa</string>
</resources>
