<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude" />

    <TextView
        android:id="@+id/tvLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude" />

    <TextView
        android:id="@+id/tvLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btVerMapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_no_mapa" />

    <Button
        android:id="@+id/btVerEndereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_endere_o" />

    <Button
        android:id="@+id/btVerImagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_imagem" />

    <ImageView
        android:id="@+id/ivMapa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/mostrar_mapa" />

</LinearLayout>